Manutencao Continue Version

--- a/Bv.Acesso.Api/Bv.Acesso.Api.csproj
+++ b/Bv.Acesso.Api/Bv.Acesso.Api.csproj
@@ -7,9 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Configuracoes\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bv.Acesso.Dominio\Bv.Acesso.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
