--- a/Bv.Acesso.Api/Properties/launchSettings.json
+++ b/Bv.Acesso.Api/Properties/launchSettings.json
@@ -10,16 +10,18 @@
   "profiles": {
     "Bv.Acesso.Api": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
+      //"dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7291;http://localhost:5034",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7291;http://localhost:5034"
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
